[#6] Mutating operations support
